VOS implemented Removing VOS loader from C# Yet missing application selection for VOS Yet missing call from C# to open application in ESOS/VOS

--- a/UI/_vanillaOverlaySystem/include.html
+++ b/UI/_vanillaOverlaySystem/include.html
@@ -1,25 +1,5 @@
-<main></main>  
-<script>
-    if(!window.EUIS_WasRegistered){
-        System.import('@k45-euis/vos-config');
-        window.EUIS_WasRegistered = true;
-    }
-</script>
-<div id="taskbar">
+<div id="toolbox">
     <div id="title">EUIS</div>
     <div id="buttons">
-        <div class="appButton" style="background-image: url('coui://euis.k45/UI/esos/00813c0456a0485fb91f.svg');"></div>
-        <div class="appButton" style="background-image: url('coui://euis.k45/UI/esos/00813c0456a0485fb91f.svg');"></div>
-        <div class="appButton" style="background-image: url('coui://euis.k45/UI/esos/00813c0456a0485fb91f.svg');"></div>
-        <div class="appButton" style="background-image: url('coui://euis.k45/UI/esos/00813c0456a0485fb91f.svg');"></div>
-        <div class="appButton" style="background-image: url('coui://euis.k45/UI/esos/00813c0456a0485fb91f.svg');"></div>
-        <div class="appButton" style="background-image: url('coui://euis.k45/UI/esos/00813c0456a0485fb91f.svg');"></div>
-        <div class="appButton" style="background-image: url('coui://euis.k45/UI/esos/00813c0456a0485fb91f.svg');"></div>
-        <div class="appButton" style="background-image: url('coui://euis.k45/UI/esos/00813c0456a0485fb91f.svg');"></div>
-        <div class="appButton" style="background-image: url('coui://euis.k45/UI/esos/00813c0456a0485fb91f.svg');"></div>
-        <div class="appButton" style="background-image: url('coui://euis.k45/UI/esos/00813c0456a0485fb91f.svg');"></div>
-        <div class="appButton" style="background-image: url('coui://euis.k45/UI/esos/00813c0456a0485fb91f.svg');"></div>
-        <div class="appButton" style="background-image: url('coui://euis.k45/UI/esos/00813c0456a0485fb91f.svg');"></div>
-        <div class="appButton" style="background-image: url('coui://euis.k45/UI/esos/00813c0456a0485fb91f.svg');"></div>
     </div>
 </div>
