Styling the EUIS ingame box toggling button

--- a/UI/_vanillaOverlaySystem/include.html
+++ b/UI/_vanillaOverlaySystem/include.html
@@ -1,5 +1,5 @@
 <div id="toolbox">
-    <div id="title">EUIS</div>
+    <button class="toggleToolbox"></button>
     <div id="buttons">
     </div>
 </div>
